# nakitai

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  ransom_message.template
assets/: Nakitai.drawio  nakitai.drawio
scripts/: extract_decrypt_key_nky.js  extract_decryption_key_nky.js  extract_decryption_key_nky.py  generate_rsa_keys.js  generate_rsa_keys.py
src/: image.rs  lib.rs  ransomware.rs  recover.rs
src/utils/: crypto.rs  mod.rs  traverse.rs
