[package]
name = "nakitai"
version = "0.1.0"
edition = "2021"

# [[bam]]
# name = "ransomware"
# path = "src/ransomware.rs"

# [[bam]]
# name = "recover"
# path = "src/recover.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
walkdir = "2.3"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
druid = { git = "https://github.com/linebender/druid.git", features = ["image", "png"] }
threadpool = "1.0"
dirs = "4.0"

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"

[profile.dev]
opt-level = 0
